# annofab-task-assignment-plugin-sample

./: .gitignore  Makefile  README.md  pyproject.toml
app/: main.py
